2000-11-27  Dancer Vesperman <dancer@users.sourceforge.net>
	* A quotable quote.

2000-11-27  Tristan Tarrant <nadir@users.sourceforge.net>
	* bggame.c: load the right palette for credits/quotes,
	  corrected horizontal spacing of menu font

2000-11-27  Tristan Tarrant <nadir@users.sourceforge.net>
	* data/palette_fades.shp: new shape
	* game.cc: allow user to enable/disable fades
	* menulist.h: return index of entry in menu from add_entry

2000-11-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* acconfig.h, configure.in: complete overhaul of configure.in
	* exult.cc: included '--disable-sdl-parachute' configure option

2000-11-26  Jeff Freedman <freedman@hevanet.com>
	* Split up imagewin.{cc,h} and moved to imagwin directory.
	* SDL palette methods moved to Image_window8 from Image_buffer8.

2000-11-27  Dancer Vesperman <dancer@users.sourceforge.net>
	* Some people are having trouble including pthread_alloc. Include cstring as an alternative

2000-11-27  Dancer Vesperman <dancer@users.sourceforge.net>
	* Never call the mixer object through it's pointer without verifying the validity of that pointer. Should fix occasional segfault at shutdown

2000-11-27  Dancer Vesperman <dancer@users.sourceforge.net>
	* Create newstrdup() in gumps.cc as an interim solution. Goal is to encapsulate all char arrays into an efficient storage unit (coming soon. Be patient). For now we lose strdup to avoid the mixed memory models. newstrdup() will throw std::invalid_argument() if handed a NULL.
	* Change all strdup()'s to newstrdup()
	* Change free() for all strdup'ed() blocks to delete []
	* alloc.cc: Something changed in exception specification. Add std::
	* alloc.cc: pthread_alloc declares memset. Include it

2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* README.BeOS: added
	* README.win32: added (temporarily unavailable) to cross-compiling instructions	
	* Makefile.be: added 'make bindist' option to automate distributing